# todoList

./: .gitignore  BUILd_DOC.md  CMakeLists (copy).txt  CMakeLists.txt  README.md  addbutton.cpp  addbutton.h  chatbox.cpp  chatbox.h  chatlabel.cpp  chatlabel.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  serialize.cpp  serialize.h
docs/: BUILd_DOC.md  CMAKE_DOC.md  LINUX_DOC .md  LINUX_DOC.md  WIN_DOC .md  WIN_DOC.md
